--- a/mod2-1_Comprendio.html
+++ b/mod2-1_Comprendio.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <p>This is a webpage. I love Computer Science.</p>
-        <br><br><a href="AlternativeAssessment2.html">Go Back</a>
+        <br><br><a href="Alternative2.html">Go Back</a>
     </body>
 </html>
