--- a/mod2-2_Comprendio.html
+++ b/mod2-2_Comprendio.html
@@ -20,7 +20,7 @@
                 </ol>
             </span>
             <p>Copyright &copy; DASComprendio 9-Section</p>
-            <a href="AlternativeAssessment2.html">Go Back</a>
+            <a href="Alternative2.html">Go Back</a>
         </div>
     </body>
 </html>
