--- a/mod3-1_Comprendio.html
+++ b/mod3-1_Comprendio.html
@@ -58,7 +58,7 @@
                 <td>fiction</td>
             </tr>
         </table>
-        <br><a href="AlternativeAssessment2.html">Go Back</a>
+        <br><a href="Alternative2.html">Go Back</a>
     </body>
 </html>
 
